--- a/ASL.Backend/appsettings.json
+++ b/ASL.Backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ASL_MatchmakingDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "DefaultConnection": "Server=localhost;Database=ASL_MatchmakingDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
     "SqliteConnection": "Data Source=ASL_MatchmakingDB.db"
   },
   "Logging": {
