--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ opencv-python==4.7.0.72
 mediapipe==0.10.5
 scikit-learn==1.2.2
 matplotlib==3.7.1
-tqdm==4.65.0 
+tqdm==4.65.0
+fastapi==0.103.1
+uvicorn==0.23.2
+python-multipart==0.0.6
+pydantic==2.3.0 
